--- a/public/css/addMeeting.css
+++ b/public/css/addMeeting.css
@@ -1,7 +1,28 @@
 .inputField {
 
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	box-sizing: border-box;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
 }
 
 #notifications {
-	
+
+	border: solid 1px black;
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	background-color: white;
+	z-index: 100;
+
+	height: 400px;
+	margin-top: -200px;
+
+	width: 600px;
+	margin-left: -300px;
+
 }
