handlebar trouble, changed to html. modified addMeeting.css

--- a/views/addMeeting.html
+++ b/views/addMeeting.html
@@ -8,7 +8,7 @@
 		<link href="/css/bootstrap.min.css" rel="stylesheet">
 		<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 		<!--<link href="/css/homepage.css" rel="stylesheet">-->
-		<link href="/css/addEvent.css" rel="stylesheet">
+		<link href="/css/addMeeting.css" rel="stylesheet">
 	</head>
 	<body>
 		<p>Meeting Name</p>
