--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,11 +14,11 @@
 		<div class="dropdown">
   			<button id="dropbtn">Menu</button>
   			<div id="myDropdown" class="dropdown-content">
-    			<a href="/views/index.handlebars">Home</a>
-    			<a href="/views/meetingsCreated.handlebars">Meetings Created</a>
-    			<a href="/views/meetingsJoined.handlebars">Meetings Joined</a>
-    			<a href="/views/friends.handlebars">Friends</a>
-    			<a href="/views/profile.handlebars">Profile</a>
+    			<a href="index.handlebars">Home</a>
+    			<a href="meetingsCreated.handlebars">Meetings Created</a>
+    			<a href="meetingsJoined.handlebars">Meetings Joined</a>
+    			<a href="friends.handlebars">Friends</a>
+    			<a href="profile.handlebars">Profile</a>
   			</div>
 		</div>
 
