--- a/public/css/addMeeting.css
+++ b/public/css/addMeeting.css
@@ -1,6 +1,5 @@
 .inputField {
-
-	width: 100%;
+	width: 40%;
 	padding: 12px 20px;
 	margin: 8px 0;
 	box-sizing: border-box;
@@ -11,18 +10,15 @@
 }
 
 #notifications {
-
+	box-sizing: border-box;
 	border: solid 1px black;
-	position: fixed;
-	left: 50%;
-	top: 50%;
+	border-width: 2px;
+	border-radius: 4px;
 	background-color: white;
-	z-index: 100;
+}
 
-	height: 400px;
-	margin-top: -200px;
-
-	width: 600px;
-	margin-left: -300px;
-
+body {
+	margin-left: 2vw;
+	margin-right: 2vw;
+	margin-top: 2vw;
 }
