--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,10 +7,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="/css/bootstrap.min.css" rel="stylesheet">
 		<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-		<!--<link href="/css/homepage.css" rel="stylesheet">-->
+		<link href="/css/homepage.css" rel="stylesheet">
 		<link href="/css/menu.css" rel="stylesheet">
 	</head>
 	<body>
+		<div class="container" style="z-index: 1; position: absolute; left: 10px; top: 130px;">
 		<div class="dropdown">
   			<button id="dropbtn">Menu</button>
   			<div id="myDropdown" class="dropdown-content">
@@ -21,9 +22,10 @@
     			<a href="profile.handlebars">Profile</a>
   			</div>
 		</div>
-
+		</div>
+		<div class="container" style="z-index: 1; position: absolute; left: 30px; top:130px;">
 		<button id="addMeeting">Add Meeting</button>
-
+		</div>
    		<div class="searchBarHolder">
      		<input id="pac-input" class="controls" type="text" placeholder="Find a Location...">
      	</div>
