handlebars to html for skeleton navigation

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,11 +15,11 @@
 		<div class="dropdown">
   			<button id="dropbtn">Menu</button>
   			<div id="myDropdown" class="dropdown-content">
-    			<a href="index.handlebars">Home</a>
-    			<a href="meetingsCreated.handlebars">Meetings Created</a>
-    			<a href="meetingsJoined.handlebars">Meetings Joined</a>
-    			<a href="friends.handlebars">Friends</a>
-    			<a href="profile.handlebars">Profile</a>
+    			<a href="#">Home</a>
+    			<a href="meetingsCreated.html">Meetings Created</a>
+    			<a href="meetingsJoined.html">Meetings Joined</a>
+    			<a href="friends.html">Friends</a>
+    			<a href="profile.html">Profile</a>
   			</div>
 		</div>
 		</div>
