--- a/views/addMeeting.html
+++ b/views/addMeeting.html
@@ -31,5 +31,9 @@
   			<input type="radio" name="two" value="two"> Friend is 2 min away <br>
 		</form>
 
+		<br>
+		<button id="submit" type="button">Submit</button>
+		<button id="cancel" type="button">Cancel</button>
+
 	</body>
 </html>
