--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,6 +9,7 @@
 		<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 		<link href="/css/homepage.css" rel="stylesheet">
 		<link href="/css/menu.css" rel="stylesheet">
+		<link href="/css/material-kit.css" rel="stylesheet" />
 	</head>
 	<body>
 		<div class="container" style="z-index: 1; position: absolute; left: 10px; top: 130px;">
@@ -38,18 +39,18 @@
      	
      	<div id="map"></div>
      	<!--   Core JS Files   -->
-		<script src="./assets/js/jquery.min.js" type="text/javascript"></script>
-		<script src="./assets/js/bootstrap.min.js" type="text/javascript"></script>
-		<script src="./assets/js/material.min.js"></script>
+		<script src="/js/jquery.min.js" type="text/javascript"></script>
+		<script src="/js/bootstrap.min.js" type="text/javascript"></script>
+		<script src="/js/material.min.js"></script>
 
 		<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-		<script src="./assets/js/nouislider.min.js" type="text/javascript"></script>
+		<script src="/js/nouislider.min.js" type="text/javascript"></script>
 
 		<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-		<script src="./assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
+		<script src="/js/bootstrap-datepicker.js" type="text/javascript"></script>
 
 		<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-		<script src="./assets/js/material-kit.js" type="text/javascript"></script>
+		<script src="/js/material-kit.js" type="text/javascript"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0WRQl-Hgot5KsHhaHU9zLo4SgK5nL6M4&libraries=places&callback=initMap"
       		async defer></script>
 
