--- a/views/signin-page.html
+++ b/views/signin-page.html
@@ -3,8 +3,6 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href=".../public/img/apple-icon.png">
-  <link rel="icon" type="image/png" href=".../public/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
   <title>RUHereYet Signin</title>
@@ -17,8 +15,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
   <!-- CSS Files -->
-  <link href="../public/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="../public/css/material-kit.css" rel="stylesheet" />
+  <link href="/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="/css/material-kit.css" rel="stylesheet" />
 
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 
@@ -27,7 +25,7 @@
 <body class="signup-page">
 
   <div class="wrapper">
-    <div class="header header-filter" style="background-image: url('../public/img/background.jpg'); background-size: cover; background-position: top center;">
+    <div class="header header-filter" style="background-image: url('/img/background.jpg'); background-size: cover; background-position: top center;">
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
@@ -79,17 +77,17 @@
 
 </body>
 <!--   Core JS Files   -->
-<script src="../public/js/jquery.min.js" type="text/javascript"></script>
-<script src="../public/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="../public/js/material.min.js"></script>
+<script src="/js/jquery.min.js" type="text/javascript"></script>
+<script src="/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/js/material.min.js"></script>
 
 <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="../public/js/nouislider.min.js" type="text/javascript"></script>
+<script src="/js/nouislider.min.js" type="text/javascript"></script>
 
 <!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-<script src="../public/js/bootstrap-datepicker.js" type="text/javascript"></script>
+<script src="/js/bootstrap-datepicker.js" type="text/javascript"></script>
 
 <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-<script src="../public/js/material-kit.js" type="text/javascript"></script>
+<script src="/js/material-kit.js" type="text/javascript"></script>
 
 </html>
