--- a/views/meetingsJoined.html
+++ b/views/meetingsJoined.html
@@ -21,6 +21,13 @@
   			</div>
 		</div>
 
+		<h3> List of Meetings You Have Joined </h3>
+		<ul>
+			{{#each meetings}}
+			<li></li>
+			{{/each}}
+		</ul>
+
 		<script src="/js/menu.js"></script>
 	</body>
 </html>
