--- a/views/friends.html
+++ b/views/friends.html
@@ -21,6 +21,16 @@
         </div>
     </div>
 
+    <h3>Friends</h3>
+    <h6>Your Friends List</h6>
+    <li> {{#each friends}}
+      <li>
+         Username: {{username}} | Name: {{name}}
+      </li>
+
+      {{#each}}
+    </li>
+
     <script src="/js/menu.js"></script>
   </body>
 </html>
