--- a/views/meetingsJoined.html
+++ b/views/meetingsJoined.html
@@ -23,8 +23,8 @@
 
 		<h3> List of Meetings You Have Joined </h3>
 		<ul>
-			{{#each meetings}}
-			<li></li>
+			{{#each meetingsJoined}}
+			<li>You have joined the meeting: {{meetingName}} at {{time}}</li>
 			{{/each}}
 		</ul>
 
