--- a/views/friends.html
+++ b/views/friends.html
@@ -31,6 +31,19 @@
       {{#each}}
     </li>
 
+    <form id="addFriendForm" role="form" method="get" action="/add">
+      <h3>Add a friend</h3>
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="text" class="form-control" id="name" placeholder="Name" name="name">
+        </div>
+        <div class="form-group">
+          <label for="description">Description:</label>
+          <input type="text" class="form-control" id="description" placeholder="Description" name="description">
+        </div>
+        <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
+    </form>
+
     <script src="/js/menu.js"></script>
   </body>
 </html>
