--- a/views/friends.html
+++ b/views/friends.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <h3>Friends</h3>
+    <h3 class="header">Friends</h3>
     <h6>Your Friends List</h6>
     <li> {{#each friends}}
       <li>
