--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,7 @@
     				<a href="meetingsCreated.html">Meetings Created</a>
     				<a href="meetingsJoined.html">Meetings Joined</a>
     				<a href="friends.html">Friends</a>
-    				<a href="profile.html">Profile</a>
+    				<a href="/profile">Profile</a>
   				</div>
 			</div>
 		</div>
