required field added

--- a/views/signup-page.html
+++ b/views/signup-page.html
@@ -39,28 +39,28 @@
                     <span class="input-group-addon">
 											<i class="material-icons">face</i>
 										</span>
-                    <input type="text" class="form-control" placeholder="First Name...">
+                    <input type="text" class="form-control" placeholder="First Name..." required/>
                   </div>
 
 		  <div class="input-group">
                     <span class="input-group-addon">
 											<i class="material-icons">face</i>
 										</span>
-                    <input type="text" class="form-control" placeholder="Last Name...">
+                    <input type="text" class="form-control" placeholder="Last Name..." required/>
                   </div>
 
                   <div class="input-group">
                     <span class="input-group-addon">
 											<i class="material-icons">account_circle</i>
 										</span>
-                    <input type="text" class="form-control" placeholder="Username...">
+                    <input type="text" class="form-control" placeholder="Username..." required/>
                   </div>
 
                   <div class="input-group">
                     <span class="input-group-addon">
 											<i class="material-icons">lock_outline</i>
 										</span>
-                    <input type="password" placeholder="Password..." class="form-control" />
+                    <input type="password" placeholder="Password..." class="form-control" required/>
                   </div>
 
                   <!-- If you want to add a checkbox to this form, uncomment this code
@@ -73,7 +73,7 @@
 									</div> -->
                 </div>
                 <div class="footer text-center">
-                  <a href="#pablo" class="btn btn-simple btn-primary btn-lg">Get Started</a>
+                  <input type="submit" value = "Get Started" a href="./index" class="btn btn-simple btn-primary btn-lg">
                   <p class="text-muted">Already have an account?</p>
                   <a href = "./signin-page.html" class="btn btn-primary btn-simple">Sign In</a>
                 </div>
