--- a/views/signin-page.html
+++ b/views/signin-page.html
@@ -40,15 +40,18 @@
                     <span class="input-group-addon">
 											<i class="material-icons">account_circle</i>
 										</span>
-                    <input type="text" class="form-control" placeholder="Username...">
+                    <input type="text" class="form-control" placeholder="Username..." required/>
                   </div>
 
                   <div class="input-group">
                     <span class="input-group-addon">
 											<i class="material-icons">lock_outline</i>
 										</span>
-                    <input type="password" placeholder="Password..." class="form-control" />
+                    <input type="password" class="form-control" placeholder="Password..." required/>
                   </div>
+                  <script>
+
+                  </script>
 
                   <!-- If you want to add a checkbox to this form, uncomment this code
 
@@ -60,7 +63,7 @@
 									</div> -->
                 </div>
                 <div class="footer text-center">
-                  <a href="#pablo" class="btn btn-simple btn-primary btn-lg">Sign In</a>
+                  <input type="submit" value = "Sign In" a href="./index" class="btn btn-simple btn-primary btn-lg">
                   <p class="text-muted">Need an Account?</p>
                   <a href = "./signup-page.html" class="btn btn-primary btn-simple">Sign Up</a>
                 </div>
