--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -56,6 +56,6 @@
 
 	    <script src="/js/homepage.js"></script>
 	    <script src="/js/menu.js"></script>
-	    <script stc="/json/meetings.json"></script>
+	    <script src="/json/meetings.json"></script>
 	</body>
 </html>
