--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -3,13 +3,15 @@
 #map {
  height: 100%;
  position: relative;
+ margin-top: 0px;
 }
 /* Makes the map fill the window. */
 html, body {
  height: 100%;
- margin: 0;
+ /*margin-top: 30px;*/
  padding: 0;
 }
+
 #description {
  font-family: Roboto;
  font-size: 15px;
@@ -88,16 +90,15 @@ html, body {
   margin-right: auto;
 }
 
-#addMeeting {
-    position: fixed;
-    bottom: 10px;
-    right: 10px; 
-}
-
-.navbar {
-    margin-top: 100px;
-    z-index: 1;
-    position: fixed;
+#instruction {
+  margin-top: 0px;
+  height: 55px;
+  width: 100%;
+  font-size: 25px;
+  color:black;
+  text-align: center;
+  background-color: #4d90fe;
+  padding-top: 10px;
 }
 
 li {
