--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -1,6 +1,6 @@
 /*Container for all dropdown content */
 .container {
-    z-index: 1; 
+    z-index: 10;
     position: fixed; 
     left: .5vw; 
     top: 45vw;
@@ -22,18 +22,18 @@
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-    position: absolute;
+    position: fixed;
     display: inline-block;
 }
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: fixed;
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 10;
 }
 
 /* Links inside the dropdown */
@@ -51,9 +51,17 @@
 .show {display:block;}
 
 .header {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 30vw;
+    margin-right: 5vw;
     text-align: center;
+}
+
+ul {
+    margin-top: 5vw;
+}
+
+.under {
+    z-index: 1;
 }
 
 #addMeetingButton {
