--- a/views/friends.html
+++ b/views/friends.html
@@ -23,21 +23,23 @@
 
     <h3 class="header">Friends</h3>
     <h6>Your Friends List</h6>
-      {{#each friends}}
-      <li>
-         Username: {{username}} | Name: {{name}}
-      </li>
-      {{#each}}
+      <ul class="list-group">
+        {{#each friends}}
+        <li class="list-group-item">
+          Username: {{username}} | Name: {{name}}
+        </li>
+        {{#each}}
+      </ul>
 
-    <form id="addFriendForm" role="form" method="get" action="/add">
+    <form id="addFriendForm" role="form" method="get" action="/addFriend">
       <h3>Add a friend</h3>
         <div class="form-group">
           <label for="name">Name:</label>
-          <input type="text" class="form-control" id="name" placeholder="Name" name="name">
+          <input type="text" class="form-control" id="name" placeholder="Ex: John" name="name">
         </div>
         <div class="form-group">
-          <label for="description">Description:</label>
-          <input type="text" class="form-control" id="description" placeholder="Description" name="description">
+          <label for="username">Username:</label>
+          <input type="text" class="form-control" id="username" placeholder="Ex: JohnSmith1" name="username">
         </div>
         <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
     </form>
