--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,7 +23,7 @@
     				<a href="#">Home</a>
     				<a href="meetingsCreated.html">Meetings Created</a>
     				<a href="meetingsJoined.html">Meetings Joined</a>
-    				<a href="friends.html">Friends</a>
+    				<a href="friends">Friends</a>
     				<a href="profile">Profile</a>
   				</div>
 			</div>
