--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,11 +20,11 @@
 			<div class="dropdown">
   				<button id="dropbtn">Menu</button>
   				<div id="myDropdown" class="dropdown-content">
-    				<a href="#">Home</a>
-    				<a href="meetingsCreated.html">Meetings Created</a>
+    				<a href="/">Home</a>
+    				<a href="/meetingsCreated">Meetings Created</a>
     				<a href="meetingsJoined.html">Meetings Joined</a>
-    				<a href="friends">Friends</a>
-    				<a href="profile">Profile</a>
+    				<a href="/friends">Friends</a>
+    				<a href="profile.html">Profile</a>
   				</div>
 			</div>
 		</div>
