--- a/views/meetingsCreated.handlebars
+++ b/views/meetingsCreated.handlebars
@@ -13,8 +13,8 @@
 		<div class="dropdown">
   			<button id="dropbtn">Menu</button>
   			<div id="myDropdown" class="dropdown-content">
-    			<a href="#">Home</a>
-    			<a href="meetingsCreated.html">Meetings Created</a>
+    			<a href="/">Home</a>
+    			<a href="/meetingsCreated">Meetings Created</a>
     			<a href="meetingsJoined.html">Meetings Joined</a>
     			<a href="friends.html">Friends</a>
     			<a href="profile.html">Profile</a>
