--- a/views/profile.html
+++ b/views/profile.html
@@ -13,7 +13,7 @@
 		<div class="dropdown">
   			<button id="dropbtn">Menu</button>
   			<div id="myDropdown" class="dropdown-content">
-    			<a href="#">Home</a>
+    			<a href="/">Home</a>
     			<a href="meetingsCreated.html">Meetings Created</a>
     			<a href="meetingsJoined.html">Meetings Joined</a>
     			<a href="friends.html">Friends</a>
