--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,9 +21,9 @@
   				<button id="dropbtn">Menu</button>
   				<div id="myDropdown" class="dropdown-content">
     				<a href="/">Home</a>
-    				<a href="/meetingsCreated">Meetings Created</a>
-    				<a href="meetingsJoined.html">Meetings Joined</a>
-    				<a href="/friends">Friends</a>
+    				<a href="meetingsCreated">Meetings Created</a>
+    				<a href="meetingsJoined">Meetings Joined</a>
+    				<a href="friends">Friends</a>
     				<a href="profile.html">Profile</a>
   				</div>
 			</div>
