--- a/views/signin-page.html
+++ b/views/signin-page.html
@@ -63,7 +63,7 @@
 									</div> -->
                 </div>
                 <div class="footer text-center">
-                  <input type="submit" value = "Sign In" a href="./index" class="btn btn-simple btn-primary btn-lg">
+                  <input type="submit" value = "Sign In" a href="/" class="btn btn-simple btn-primary btn-lg">
                   <p class="text-muted">Need an Account?</p>
                   <a href = "./signup-page.html" class="btn btn-primary btn-simple">Sign Up</a>
                 </div>
