--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,18 +25,11 @@
     				<a href="meetingsJoined">Meetings Joined</a>
     				<a href="friends">Friends</a>
     				<a href="profile.html">Profile</a>
+    				<a href="signin-page.html">Sign In</a>
+    				<a href="signup-page.html">Sign Up</a>
   				</div>
 			</div>
 		</div>
-
-		<div style="z-index: 1; position: absolute; margin-left: 180px; top: 125px;">
-			<li><a href="./signin-page.html">Log In</a></li>
-		</div>
-
-		<div style="z-index: 1; position: absolute; margin-left: 270px; top: 125px">
-        	<li><a href="./signup-page.html">Sign Up</a></li>
-        </div>
-
 		<button id="addMeetingButton">Add Meeting at Pin</button>
 
    		<div class="searchBarHolder">
