sign page redirect to home

--- a/views/signin-page.html
+++ b/views/signin-page.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body class="signup-page">
+<body class="signin-page">
 
   <div class="wrapper">
     <div class="header header-filter" style="background-image: url('/img/background.jpg'); background-size: cover; background-position: top center;">
@@ -63,7 +63,7 @@
 									</div> -->
                 </div>
                 <div class="footer text-center">
-                  <input type="submit" value = "Sign In" a href="/" class="btn btn-simple btn-primary btn-lg">
+                  <input type="submit" value = "Sign In" a href="/" class="btn btn-simple btn-primary btn-lg" onclick="window.location='/';">
                   <p class="text-muted">Need an Account?</p>
                   <a href = "./signup-page.html" class="btn btn-primary btn-simple">Sign Up</a>
                 </div>
