--- a/views/signup-page.html
+++ b/views/signup-page.html
@@ -73,7 +73,7 @@
 									</div> -->
                 </div>
                 <div class="footer text-center">
-                  <input type="submit" value = "Get Started" a href="./index" class="btn btn-simple btn-primary btn-lg">
+                  <input type="submit" value = "Get Started" a href="./index" class="btn btn-simple btn-primary btn-lg" onclick="window.location='/';">
                   <p class="text-muted">Already have an account?</p>
                   <a href = "./signin-page.html" class="btn btn-primary btn-simple">Sign In</a>
                 </div>
