choose friends still in progress, login is now homepage, needs logout

--- a/views/meetingsCreated.handlebars
+++ b/views/meetingsCreated.handlebars
@@ -13,7 +13,7 @@
 		<div class="dropdown">
   			<button id="dropbtn">Menu</button>
   			<div id="myDropdown" class="dropdown-content">
-    			<a href="/">Home</a>
+    			<a href="/home">Home</a>
     			<a href="meetingsCreated">Meetings Created</a>
     			<a href="meetingsJoined">Meetings Joined</a>
     			<a href="friends">Friends</a>
