--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,59 +1,96 @@
 <!doctype html>
+<html lang="en">
 
-<html>
-	<head>
-		<title>RUHereYet</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="/css/bootstrap.min.css" rel="stylesheet">
-		<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-		<link href="/css/homepage.css" rel="stylesheet">
-		<link href="/css/menu.css" rel="stylesheet">
-		<link href="/css/material-kit.css" rel="stylesheet" />
-	</head>
-	<body>
-		<div id="instruction">
-			Search a Location to Set Your Meeting At!
-		</div>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-		<div class="container">
-			<div class="dropdown">
-  				<button id="dropbtn">Menu</button>
-  				<div id="myDropdown" class="dropdown-content">
-    				<a href="/">Home</a>
-    				<a href="meetingsCreated">Meetings Created</a>
-    				<a href="meetingsJoined">Meetings Joined</a>
-    				<a href="friends">Friends</a>
-    				<a href="profile.html">Profile</a>
-    				<a href="signin-page.html">Sign In</a>
-    				<a href="signup-page.html">Sign Up</a>
-  				</div>
-			</div>
-		</div>
-		<button id="addMeetingButton">Add Meeting at Pin</button>
+  <title>RUHereYet SignIn</title>
 
-   		<div class="searchBarHolder">
-     		<input id="pac-input" class="controls" type="text" placeholder="Meet at a Location...">
-     	</div>
-     	
-     	<div id="map"></div>
-     	<!--   Core JS Files   -->
-		<script src="/js/jquery.min.js" type="text/javascript"></script>
-		<script src="/js/bootstrap.min.js" type="text/javascript"></script>
-		<script src="/js/material.min.js"></script>
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
-		<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-		<script src="/js/nouislider.min.js" type="text/javascript"></script>
+  <!--     Fonts and icons     -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
-		<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-		<script src="/js/bootstrap-datepicker.js" type="text/javascript"></script>
+  <!-- CSS Files -->
+  <link href="/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="/css/material-kit.css" rel="stylesheet" />
 
-		<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-		<script src="/js/material-kit.js" type="text/javascript"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0WRQl-Hgot5KsHhaHU9zLo4SgK5nL6M4&libraries=places&callback=initMap"
-      		async defer></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 
-	    <script src="/js/homepage.js"></script>
-	    <script src="/js/menu.js"></script>
-	</body>
+</head>
+
+<body class="signin-page">
+
+  <div class="wrapper">
+    <div class="header header-filter" style="background-image: url('/img/background.jpg'); background-size: cover; background-position: top center;">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+            <div class="card card-signup">
+              <form class="form" method="" action="">
+                <div class="header header-info text-center">
+                  <h4>Sign In</h4>
+                </div>
+                <div class="content">
+
+                  <div class="input-group">
+                    <span class="input-group-addon">
+											<i class="material-icons">account_circle</i>
+										</span>
+                    <input type="text" class="form-control" placeholder="Username..." required/>
+                  </div>
+
+                  <div class="input-group">
+                    <span class="input-group-addon">
+											<i class="material-icons">lock_outline</i>
+										</span>
+                    <input type="password" class="form-control" placeholder="Password..." required/>
+                  </div>
+                  <script>
+
+                  </script>
+
+                  <!-- If you want to add a checkbox to this form, uncomment this code
+
+									<div class="checkbox">
+										<label>
+											<input type="checkbox" name="optionsCheckboxes" checked>
+											Subscribe to newsletter
+										</label>
+									</div> -->
+                </div>
+                <div class="footer text-center">
+                  <input type="submit" value = "Sign In" a href="/" class="btn btn-simple btn-primary btn-lg" onclick="window.location='/home';">
+                  <p class="text-muted">Need an Account?</p>
+                  <a href = "./signup-page.html" class="btn btn-primary btn-simple">Sign Up</a>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+
+</body>
+<!--   Core JS Files   -->
+<script src="/js/jquery.min.js" type="text/javascript"></script>
+<script src="/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/js/material.min.js"></script>
+
+<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+<script src="/js/nouislider.min.js" type="text/javascript"></script>
+
+<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
+<script src="/js/bootstrap-datepicker.js" type="text/javascript"></script>
+
+<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+<script src="/js/material-kit.js" type="text/javascript"></script>
+
 </html>
