--- a/views/signup-page.html
+++ b/views/signup-page.html
@@ -73,9 +73,9 @@
 									</div> -->
                 </div>
                 <div class="footer text-center">
-                  <input type="submit" value = "Get Started" a href="./index" class="btn btn-simple btn-primary btn-lg" onclick="window.location='/';">
+                  <input type="submit" value = "Get Started" a href="./index" class="btn btn-simple btn-primary btn-lg" onclick="window.location='/home';">
                   <p class="text-muted">Already have an account?</p>
-                  <a href = "./signin-page.html" class="btn btn-primary btn-simple">Sign In</a>
+                  <a href = "/" class="btn btn-primary btn-simple">Sign In</a>
                 </div>
               </form>
             </div>
