wiz of oz notifications work without sound

--- a/views/addMeeting.html
+++ b/views/addMeeting.html
@@ -29,14 +29,14 @@
 			<input class="inputField" id="friendName" type="text" placeholder="ex: Johnny">
 
 			<p>Select Arrival Time(s) Notifications</p>
-	  			<div class="radio">
-	  				<input type="radio" name="ten" value="ten"> Friend is 10 min away <br>
+	  			<div>
+	  				<input type="checkbox" id="ten" name="ten" value="ten"> Friend is 10 min away <br>
 	  			</div>
-	  			<div class="radio">
-	  				<input type="radio" name="five" value="five"> Friend is 5 min away <br>
+	  			<div>
+	  				<input type="checkbox" id="five" name="five" value="five"> Friend is 5 min away <br>
 	  			</div>
-	  			<div class="radio">
-	  				<input type="radio" name="two" value="two"> Friend is 2 min away <br>
+	  			<div>
+	  				<input type="checkbox" id="two" name="two" value="two"> Friend is 2 min away <br>
 	  			</div>
 
 	  			<br>
