--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-  <title>RUHereYet SignIn</title>
+  <title>RUHereYet Signup</title>
 
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
@@ -22,10 +22,9 @@
 
 </head>
 
-<body class="signin-page">
-
+<body class="signup-page">
   <div class="wrapper">
-    <div class="header header-filter" style="background-image: url('/img/background.jpg'); background-size: cover; background-position: top center;">
+    <div class="header header-filter" style="background-image: url('/img/background.jpg'); background-size: cover; background-position: center;">
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
@@ -38,41 +37,38 @@
 
                   <div class="input-group">
                     <span class="input-group-addon">
-											<i class="material-icons">account_circle</i>
-										</span>
+                      <i class="material-icons">face</i>
+                    </span>
                     <input type="text" class="form-control" placeholder="Username..." required/>
                   </div>
 
+
                   <div class="input-group">
                     <span class="input-group-addon">
-											<i class="material-icons">lock_outline</i>
-										</span>
-                    <input type="password" class="form-control" placeholder="Password..." required/>
+                      <i class="material-icons">lock_outline</i>
+                    </span>
+                    <input type="password" placeholder="Password..." class="form-control" required/>
                   </div>
-                  <script>
-
-                  </script>
 
                   <!-- If you want to add a checkbox to this form, uncomment this code
 
-									<div class="checkbox">
-										<label>
-											<input type="checkbox" name="optionsCheckboxes" checked>
-											Subscribe to newsletter
-										</label>
-									</div> -->
+                  <div class="checkbox">
+                    <label>
+                      <input type="checkbox" name="optionsCheckboxes" checked>
+                      Subscribe to newsletter
+                    </label>
+                  </div> -->
                 </div>
                 <div class="footer text-center">
-                  <input type="submit" value = "Sign In" a href="/" class="btn btn-simple btn-primary btn-lg" onclick="window.location='/home';">
-                  <p class="text-muted">Need an Account?</p>
-                  <a href = "./signup-page.html" class="btn btn-primary btn-simple">Sign Up</a>
+                  <input type="submit" value = "Sign In" class="btn btn-simple btn-primary btn-lg" onclick="window.location='/home';">
+                  <p class="text-muted">Need an account?</p>
+                  <a href = "/signup-page.html" class="btn btn-primary btn-simple">Sign Up</a>
                 </div>
               </form>
             </div>
           </div>
         </div>
       </div>
-
     </div>
 
   </div>
