--- a/views/signin-page.html
+++ b/views/signin-page.html
@@ -23,9 +23,8 @@
 </head>
 
 <body class="signin-page">
-
   <div class="wrapper">
-    <div class="header header-filter" style="background-image: url('/img/background.jpg'); background-size: cover; background-position: top center;">
+    <div class="header header-filter" style="background-image: url('/img/background.jpg'); background-size: cover; background-position: center;">
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
@@ -38,41 +37,37 @@
 
                   <div class="input-group">
                     <span class="input-group-addon">
-											<i class="material-icons">account_circle</i>
-										</span>
-                    <input type="text" class="form-control" placeholder="Username..." required/>
+                      <i class="material-icons">face</i>
+                    </span>
+                    <input type="text" class="form-control" placeholder="UserName..." required/>
                   </div>
 
                   <div class="input-group">
                     <span class="input-group-addon">
-											<i class="material-icons">lock_outline</i>
-										</span>
-                    <input type="password" class="form-control" placeholder="Password..." required/>
+                      <i class="material-icons">lock_outline</i>
+                    </span>
+                    <input type="password" placeholder="Password..." class="form-control" required/>
                   </div>
-                  <script>
-
-                  </script>
 
                   <!-- If you want to add a checkbox to this form, uncomment this code
 
-									<div class="checkbox">
-										<label>
-											<input type="checkbox" name="optionsCheckboxes" checked>
-											Subscribe to newsletter
-										</label>
-									</div> -->
+                  <div class="checkbox">
+                    <label>
+                      <input type="checkbox" name="optionsCheckboxes" checked>
+                      Subscribe to newsletter
+                    </label>
+                  </div> -->
                 </div>
                 <div class="footer text-center">
-                  <input type="submit" value = "Sign In" a href="/" class="btn btn-simple btn-primary btn-lg" onclick="window.location='/';">
-                  <p class="text-muted">Need an Account?</p>
-                  <a href = "./signup-page.html" class="btn btn-primary btn-simple">Sign Up</a>
+                  <input type="submit" value = "Get Started" class="btn btn-simple btn-primary btn-lg" onclick="window.location='/home';">
+                  <p class="text-muted">Need an account?</p>
+                  <a href = "/signup-page.html" class="btn btn-primary btn-simple">Sign up</a>
                 </div>
               </form>
             </div>
           </div>
         </div>
       </div>
-
     </div>
 
   </div>
@@ -94,3 +89,4 @@
 <script src="/js/material-kit.js" type="text/javascript"></script>
 
 </html>
+
