--- a/views/addMeeting.html
+++ b/views/addMeeting.html
@@ -15,6 +15,14 @@
 
 			<h3>Choose Meeting Specifications</h3>
 
+			<div id="meetingPlace">	
+			</div>
+
+			<div>
+				<input type="hidden" id="vicinity" name="vicinity" value="">
+				<input type="hidden" id="address" name="address" value="">
+			</div>
+
 			<div class="form-group">
 	          <label for="meetingName">Meeting Name:</label>
 	          <input type="text" class="inputField form-control" id="meetingName" placeholder="Name" name="meetingName">
