--- a/public/css/friends.css
+++ b/public/css/friends.css
@@ -1,3 +1,4 @@
+
 .inputField {
 	width: 40%;
 	padding: 12px 20px;
@@ -9,10 +10,18 @@
 	box-sizing: border-box;
 }
 
+h3{
+	text-align: center;
+	font-weight: bold;
+}
+
 
 #submit {
+	text-align: right;
+}
 
-	margin-right: 0%;
+.label {
+	font-weight: bold;
 }
 
 #cancel {
@@ -20,11 +29,7 @@
 }
 
 body {
-	margin-left: 6vw;
-	margin-right: 6vw;
-	margin-top: 6vw;
-}
-
-.p{
-	font-size: 2px;
+	margin-left: 2vw;
+	margin-right: 2vw;
+	margin-top: 2vw;
 }
