--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -34,7 +34,13 @@
      		<input id="pac-input" class="controls" type="text" placeholder="Meet at a Location...">
      	</div>
      	
-     	<div id="map"></div>
+     	<div id="map"></div> 
+
+     	{{#each meetingsCreated}}
+			<div class="pings" id="{{meetingLocation}}">{{time}}</div>
+		{{/each}}
+
+
      	<!--   Core JS Files   -->
 		<script src="/js/jquery.min.js" type="text/javascript"></script>
 		<script src="/js/bootstrap.min.js" type="text/javascript"></script>
