--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -13,7 +13,8 @@
 	</head>
 	<body>
 		<div id="instruction">
-			Search a Location to Set Your Meeting At!
+			<br>
+			Search Your Meeting's Location!
 		</div>
 
 		<div class="container">
