--- a/views/meetingsCreated.handlebars
+++ b/views/meetingsCreated.handlebars
@@ -21,10 +21,11 @@
   			</div>
 		</div>
 
-		<h3 class="header"> List of Meetings You Have Created </h3>
-		<ul>
+		<h3 class="headerMC">Meetings Created</h3>
+		<ul id= "meetingList">
 			{{#each meetingsCreated}}
 			<li> You created the meeting: {{meetingName}} at {{time}}</li>
+			<br>
 			{{/each}}
 		</ul>
 
