--- a/views/meetingsJoined.handlebars
+++ b/views/meetingsJoined.handlebars
@@ -22,7 +22,7 @@
 		</div>
 
 		<h3 class="header"> List of Meetings You Have Joined </h3>
-		<ul>
+		<ul id="joinedMeetings">
 			{{#each meetingsJoined}}
 			<li>You have joined the meeting: {{meetingName}} at {{time}}</li>
 			{{/each}}
