profile basic css

--- a/views/profile.html
+++ b/views/profile.html
@@ -20,71 +20,43 @@
 				<a href="profile.html">Profile</a>
   			</div>
 		</div>
-		<body class="profile-page">
   <style> 
-                         .input-group{
-                             text-align: center;
-                          }
+    #dropdown {
+      margin-left: 2vw;
+    }
+    h4 {
+      margin-top: 7vw;
+      text-align: center;
+      font-size: 10vw;
+    }
+    #ProfilePic{
+      width: 60vw;
+      display: block;
+      border: 10px double darkblue;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 15%;
+    }
+    .info {
+      padding-top: 2vw;
+      display: block;
+      text-align: center;
+      vertical-align: middle;
+      font-size: 8vw;
+    }
 
-                         h4 {
-                             text-align: center;
-                             font-size: 60px;
-                          }
-                          .button {
-                            width: 500px;
-                            height: 60px;
-                            font-size: 40px;
-                            padding: 10px;
-                            border-radius: 10px;
-                            margin: 10px;
-                          }
-                          #ProfilePic{
-                            width: 200px;
+  </style>
+		<body class="profile-page">
 
-                          }
-                          .footertext-center{
-                            text-align: center;
-                          }
 
-                  </style>
-  <div class="wrapper">
-    <div class="header header-filter" style="background-image: url('/img/background.jpg'); background-size: cover; background-position: center;">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
-            <div class="card card-signup">
-              <form class="form" method="" action="">
-                <div class="header header-info text-center">
                   <h4>Profile</h4>
-                </div>
-                 <div class="input-group" id="profilepic">
+
+                 
                   <img src="https://media.istockphoto.com/illustrations/antique-illustration-of-john-smith-admiral-of-new-england-illustration-id536014585?s=2048x2048" alt="profilepic" id="ProfilePic">
-                </div>
-                <div class="input-group" id="Name">
-                  <input type="button" class="button" value ="John Smith">
-
-                </div>
-                <div class="input-group" id="Email">
-                  <input type="button" class="button" value ="johnsmith67@gmail.com">
-                </div>
-                <div class="input-group" id="PhoneNumber">
-                  <input type="button" class="button" value = "858-458-9800">
-                </div>
-             
-
-                </div>
-                <div class="footertext-center">
-                  <p class="text-muted">Is this not your profile?</p>
-                  <a href = "./signin-page.html" class="btn btn-primary btn-simple">Sign In</a>
-                </div>
-              </form>
+                <div class="info">
+                  <p> John Smith </p>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
+         
 
 
 </body>
